# python-getitem

./: .gitignore  README.md  log-getitem.org  pick.py  pyproject.toml
src/: pick.py
src/getitem/: __init__.py  getitem.py
src/pick/: __init__.py  pick.py
test/: test_getitem.py  test_pick.py
tests/: test_pick.py
