[project]
name = "pick"
version = "0.1.0"
description = "Command line tool for using getitem slice syntax to parse filter text"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["src/pick"]





[project.scripts]
"pick" = "pick.pick:main"

